ensure input selection is visible.

--- a/less/grayscale.less
+++ b/less/grayscale.less
@@ -548,6 +548,10 @@ footer.footer {
   background: fade(white, 20%);
 }
 
+input::selection {
+  background: darken(white, 20%);
+}
+
 img::selection {
   background: transparent;
 }
